# jumpstarter

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  GEMINI.md  Makefile  adb-exporter.yaml  install.sh  mkdocs.yml  pyproject.toml
.ai-context/: README.md  architecture-overview.md  cli-tools.md  development-workflow.md  documentation-authoring.md  driver-categories.md  driver-development.md  grpc-protocol.md  testing-patterns.md  uv-monorepo-structure.md
.claude/: settings.json
.devfile/: Containerfile.client
.github/: copilot-instructions.md
.github/prompts/: README.md  architecture-questions.md  driver-development.md  testing-help.md
__templates__/: create_driver.sh
__templates__/driver/: pyproject.toml.tmpl
__templates__/driver/examples/: exporter.yaml.tmpl
__templates__/driver/jumpstarter_driver/: driver.py.tmpl  driver_test.py.tmpl
contrib/drivers/rcars4/: pyproject.toml
contrib/drivers/rcars4/jumpstarter_driver_rcars4/: client.py  driver.py
contrib/libs/imagehash/jumpstarter_imagehash/: imagehash.py
docs/: index.md
docs/cli/: index.md
docs/source/api-reference/drivers/: index.md  snmp.md
docs/source/getting-started/: custom-driver.md
docs/source/getting-started/installation/: packages.md
docs/source/reference/package-apis/drivers/: index.md
examples/soc-pytest/: README.md
